# swe-th2-path-following-wagon

./: .gitignore  PARAMETER_SWEEP.md  README.md  VISUALIZATION.md  analyze_100_runs.py  curvature_sweep.py  parameter_sweep.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh  test_sweep.sh  visualize_sweep.py
analysis/: __init__.py  cli.py  statistics.py  sweep.py  test.sh  visualize.py
analysis_output/: ANALYSIS_SUMMARY.md  all_runs_detailed.csv  outlier_comparison.txt
docs/: APPROACH.md  ASSIGNMENT.md  PLAN.md
sample_results/run_20251118_185106/: ekf_diagnostics.csv  gps_data.csv  imu_data.csv  motor_data.csv  reference_data.csv  score.txt  state_data.csv  tracking_metrics.csv
sample_results/run_20251118_185133/: ekf_diagnostics.csv  gps_data.csv  imu_data.csv  motor_data.csv  reference_data.csv  score.txt  state_data.csv  tracking_metrics.csv
sample_results/run_20251118_185159/: ekf_diagnostics.csv  gps_data.csv  imu_data.csv  motor_data.csv  reference_data.csv  score.txt  state_data.csv  tracking_metrics.csv
sample_results/run_20251118_185225/: ekf_diagnostics.csv  gps_data.csv  imu_data.csv  motor_data.csv  reference_data.csv  score.txt  state_data.csv  tracking_metrics.csv
sample_results/run_20251118_185251/: ekf_diagnostics.csv  gps_data.csv  imu_data.csv  motor_data.csv  reference_data.csv  score.txt  state_data.csv  tracking_metrics.csv
sample_results/run_20251118_185317/: ekf_diagnostics.csv  gps_data.csv  imu_data.csv  motor_data.csv  reference_data.csv  score.txt  state_data.csv  tracking_metrics.csv
sample_results/run_20251118_185343/: ekf_diagnostics.csv  gps_data.csv  imu_data.csv  motor_data.csv  reference_data.csv  score.txt  state_data.csv  tracking_metrics.csv
sample_results/run_20251118_185410/: ekf_diagnostics.csv  gps_data.csv  imu_data.csv  motor_data.csv  reference_data.csv  score.txt  state_data.csv  tracking_metrics.csv
sample_results/run_20251118_185436/: ekf_diagnostics.csv  gps_data.csv  imu_data.csv  motor_data.csv  reference_data.csv  score.txt  state_data.csv  tracking_metrics.csv
sample_results/run_20251118_185502/: ekf_diagnostics.csv  gps_data.csv  imu_data.csv  motor_data.csv  reference_data.csv  score.txt  state_data.csv  tracking_metrics.csv
wagon_control/: __init__.py  __main__.py  client.py  component_modes.py  config.py  data_collector.py  diagnostic_plots.py  follower.py  live_plot.py  localizer.py  model.py  motor_controller.py  path.py  plot_results.py  plot_styles.py  visualization.py
(+320 files in other folders)
